--- a/employee-directory-react/src/styles/Header.css
+++ b/employee-directory-react/src/styles/Header.css
@@ -1,9 +1,9 @@
 .header {
-    padding: 30px 0;
-    color: #ffffff;
-    background-color: #101D42;
-    width: 100%;
+    padding: 29px 0;
+    color: #7ee060;
+    background-color: #00633a;
+    width: 101%;
     text-align: center;
-    border-bottom: 5px solid #DB162F;
-    margin-bottom: 10px;
+    border-bottom: 6px solid #07d687;
+    margin-bottom: 11px;
 }
