--- a/employee-directory-react/src/styles/SearchBox.css
+++ b/employee-directory-react/src/styles/SearchBox.css
@@ -1,8 +1,8 @@
 .searchbox button {
-    border: 1px solid #101D42;
+    border: 1px solid #10423a;
 }
 
 .searchbox button:hover {
-    background-color: #101D42;
-    color: #ffffff;
+    background-color: #10422f;
+    color: #f1f1f1;
 }
